; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/sfc/extr_filter.c_efx_filter_get_ipv4_full.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/sfc/extr_filter.c_efx_filter_get_ipv4_full.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.efx_filter_spec = type { i32 }

@IPPROTO_TCP = common dso_local global i32 0, align 4
@IPPROTO_UDP = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @efx_filter_get_ipv4_full(%struct.efx_filter_spec* %0, i32* %1, i32* %2, i32* %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.efx_filter_spec*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  store %struct.efx_filter_spec* %0, %struct.efx_filter_spec** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32* %2, i32** %10, align 8
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  %14 = load %struct.efx_filter_spec*, %struct.efx_filter_spec** %8, align 8
  %15 = getelementptr inbounds %struct.efx_filter_spec, %struct.efx_filter_spec* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  switch i32 %16, label %23 [
    i32 129, label %17
    i32 128, label %20
  ]

17:                                               ; preds = %6
  %18 = load i32, i32* @IPPROTO_TCP, align 4
  %19 = load i32*, i32** %9, align 8
  store i32 %18, i32* %19, align 4
  br label %26

20:                                               ; preds = %6
  %21 = load i32, i32* @IPPROTO_UDP, align 4
  %22 = load i32*, i32** %9, align 8
  store i32 %21, i32* %22, align 4
  br label %26

23:                                               ; preds = %6
  %24 = load i32, i32* @EINVAL, align 4
  %25 = sub nsw i32 0, %24
  store i32 %25, i32* %7, align 4
  br label %33

26:                                               ; preds = %20, %17
  %27 = load %struct.efx_filter_spec*, %struct.efx_filter_spec** %8, align 8
  %28 = load i32*, i32** %12, align 8
  %29 = load i32*, i32** %13, align 8
  %30 = load i32*, i32** %10, align 8
  %31 = load i32*, i32** %11, align 8
  %32 = call i32 @__efx_filter_get_ipv4(%struct.efx_filter_spec* %27, i32* %28, i32* %29, i32* %30, i32* %31)
  store i32 0, i32* %7, align 4
  br label %33

33:                                               ; preds = %26, %23
  %34 = load i32, i32* %7, align 4
  ret i32 %34
}

declare dso_local i32 @__efx_filter_get_ipv4(%struct.efx_filter_spec*, i32*, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
